tests/fixtures/invalid/pow_bytes_bytes_set.py
# Cannot call pow() with Bytes, Bytes, Set[int]
x = pow(b"hello", b"hello", {1, 2, 3})
